html file created

--- a/sports.html
+++ b/sports.html
@@ -44,21 +44,27 @@
 <table border="0" cellspacing="96" >
 <tr>
 <th><img class="img3" src="1566364976_814384_noticia_normal.jpg">
-<div>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</div></th>
+<div>I would recommend Work In Sports to any employer in the sports industry that is looking to fill positions within their company.  The Work in Sports site is easy to use and gives us access to some of the best candidates in sports.  We will continue to use this site as we rapidly expand.
+Cristiano Ronaldo dos Santos Aveiro.</div></th>
 <th><img class="img3" src="virat-kohli.jpg">
-<div>Virat Kohli is an Indian cricketer who currently captains the India national team. A right-handed top-order batsman, Kohli is regarded as one of the best batsmen in the world.t</div></th>
+<div>I have used Work In Sports in both my personal career searches and to post jobs looking for quality employee candidates for our club. I have always found their service to be easy to use, informative, and effective.  I have told several other teams and individual job seekers about them, and have recommended that they use Work In Sports for their job search needs as well.
+Virat Kohli.</div></th>
 </th>
 <th><img class="img3" src="57233486.jpg">
-<div>Sandeep Singh is an Indian professional field hockey player from Haryana and an ex-captain of the Indian national team. He generally features as a full back and is a penalty corner specialist for the team. He was famous as Flicker Singh in media. Singh currently holds a DSP rank in the Haryana Police.</div></th>
+<div>Whether it's an Olympic athlete or a young aspiring athlete, Anthony Donskov CARES tremendously about everyone he works with. And, once you realize how much he CARES about helping his clients become better, you realize just how much he KNOWS in regards to how to help each athlete reach their potential. Anthony's energy and enthusiasm is contagious.
+Sandeep Singh.</div></th>
 </tr>
 <tr>
 <th><img class="img3" src="17072610_web1_raptors-pacers.jpg">
-<div>Michael Jeffrey Jordan, also known by his initials MJ, is an American former professional basketball player and the principal owner of the Charlotte Hornets of the National Basketball Association. He played 15 seasons in the NBA, winning six championships with the Chicago Bulls.</div></th>
+<div>Every aspect of the comprehensive development of his athletes falls under these core values and the athletes at DCS are immersed into a system of producing results. There is a buy–in from the athletes and a collective culture of exceeding expectations from the coaches and interns. Anthony Donskov is not only developing stronger, faster, and better conditioned athletes; but better young men and women.
+Michael Jeffrey Jordan.</div></th>
 <th><img class="img3" src="maria-irudayam-1426677873.jpg">
-<div>A. Maria Irudayam is a two-time World Carrom Champion and nine-time national champion of India. He was awarded the prestigious Arjuna Award, a sporting honour presented by the Government of India, in 1996. As of 2007, he is the only person to have received the award for carrom.</div></th>
+<div>I also appreciate the advice to parents as to how to help your child become more mentally resilient to bullying in sports. The specific advice and scenarios are extremely helpful for any child on a team and very helpful in guiding parents, coaches and administrators in how to deal with bullying in sports.
+A. Maria Irudayam. </div></th>
 </th>
 <th><img class="img3" src="GettyImages-1081120088.jpg">
-<div>Ronald Antonio O'Sullivan OBE is an English professional snooker player who is one of the most successful players in the history of the sport. </div></th>
+<div>I have listened to the program twice and I think the information is valuable. I’ve always heard and read that we need to be positive with our young athletes. However, this program provides great value because it gives specific “how to’s” with regards as to how to be positive as a parent as well as how to get your young athletes to think positive.
+Ronnie O. Sullivan. </div></th>
 </tr>
 </table>
 <a href="#top">back to top</a>
