html file updated

--- a/sports.html
+++ b/sports.html
@@ -3,14 +3,10 @@
 <link rel="stylesheet" type="text/css" href="sports.css">
 <meta charset="utf-8">
 <title>Sports Complex</title>
-  
- 
 </head>
 <body>
 <a name="top">
-<div class="div1" id="home">
-
-<ul>
+<div class="div1" id="home"> 
  	 <a href="#home"><button class="button1">Home</button>
 	<a href="#repository"><button class="button1">Repository</button>
 	<a href="#testimonial"><button class="button1">Testimonial</button>
@@ -20,22 +16,28 @@
 <div class="div2" id="repository">
 <table border="0" cellspacing="96" >
 <tr>
-<th><img class="img2" src="333283.jpg">
+<th title="Football is a family of team sports that involve, to varying degrees, kicking a ball to score a goal. Unqualified, the word football normally means the form of football that is the most popular where the word is used."><img class="img2" src="333283.jpg">
 <div>Football</div></th>
-<th><img class="img2" src="1202062_1296x729.jpg"
+<th title="Cricket is a bat-and-ball game played between two teams of eleven players on a field at the centre of which is a 20-metre (22-yard) pitch with a wicket at each end, each comprising two bails balanced on three stumps. "><img class="img2" src="1202062_1296x729.jpg">
 <div>Cricket</div></th>
-</th>
-<th><img class="img2" src="Field-hockey-match-Poland-Spain-2017.jpg">
+</th></tr>
+<tr>
+<th title="Hockey is a sport in which two teams play against each other by trying to manoeuvre a ball or a puck into the opponent's goal using a hockey stick. There are many types of hockey such as bandy, field hockey, ice hockey and rink hockey."><img class="img2" src="Field-hockey-match-Poland-Spain-2017.jpg">
 <div>Hockey</div></th>
+<th title="Tennis is a racket sport that can be played individually against a single opponent or between two teams of two players each. Each player uses a tennis racket that is strung with cord to strike a hollow rubber ball covered with felt over or around a net and into the opponent's court."><img class="img2" src="tennis.jpg">
+<div>Tennis</div></th>
 </tr>
 <tr>
-<th><img class="img2" src="17072610_web1_raptors-pacers.jpg">
+<th class="th1" title="Basketball is a team sport in which two teams, most commonly of five players each, opposing one another on a rectangular court, compete with the primary objective of shooting a basketball (approximately 9.4 inches (24 cm) in diameter) through the defender's hoop (a basket 18 inches (46 cm) in diameter mounted 10 feet (3.048 m) high to a backboard at each end of the court) while preventing the opposing team from shooting through their own hoop. A field goal is worth two points, unless made from behind the three-point line, when it is worth three."><img class="img2" src="17072610_web1_raptors-pacers.jpg">
 <div>Basketball</div></th>
-<th><img class="img2" src="carrom-board-game-01.jpg"
+<th title="Carrom (also spelled carom) is a cue sport-based tabletop game of Indian origin. The game is very popular in India, Bangladesh, Afghanistan, Nepal, Pakistan, Sri Lanka, Arabian countries and surrounding areas, and is known by various names in different languages. In South Asia, many clubs and cafés hold regular tournaments."><img class="img2" src="carrom-board-game-01.jpg"
 <div>Carrom</div></th>
-</th>
-<th><img class="img2" src="0c15af63-485e-4f0d-9937-80404a93dcfe.jpg">
+</th></tr>
+<tr>
+<th title="Snooker is a cue sport that originated among British Army officers stationed in India in the second half of the 19th century. It is played on a rectangular table covered with a green cloth, with pockets at each of the four corners and in the middle of each long side."><img class="img2" src="0c15af63-485e-4f0d-9937-80404a93dcfe.jpg">
 <div>Snooker</div></th>
+<th  title="Carrom (also spelled carom) is a cue sport-based tabletop game of Indian origin. The game is very popular in India, Bangladesh, Afghanistan, Nepal, Pakistan, Sri Lanka, Arabian countries and surrounding areas, and is known by various names in different languages. In South Asia, many clubs and cafés hold regular tournaments."><img class="img2" src="chess.jpg">
+<div>Chess</div></th>
 </tr>
 </table>
 <a href="#top">back to top</a>
@@ -49,21 +51,14 @@ Cristiano Ronaldo dos Santos Aveiro.</div></th>
 <th><img class="img3" src="virat-kohli.jpg">
 <div>I have used Work In Sports in both my personal career searches and to post jobs looking for quality employee candidates for our club. I have always found their service to be easy to use, informative, and effective.  I have told several other teams and individual job seekers about them, and have recommended that they use Work In Sports for their job search needs as well.
 Virat Kohli.</div></th>
-</th>
-<th><img class="img3" src="57233486.jpg">
-<div>Whether it's an Olympic athlete or a young aspiring athlete, Anthony Donskov CARES tremendously about everyone he works with. And, once you realize how much he CARES about helping his clients become better, you realize just how much he KNOWS in regards to how to help each athlete reach their potential. Anthony's energy and enthusiasm is contagious.
-Sandeep Singh.</div></th>
-</tr>
+</th></tr>
 <tr>
 <th><img class="img3" src="17072610_web1_raptors-pacers.jpg">
-<div>Every aspect of the comprehensive development of his athletes falls under these core values and the athletes at DCS are immersed into a system of producing results. There is a buy–in from the athletes and a collective culture of exceeding expectations from the coaches and interns. Anthony Donskov is not only developing stronger, faster, and better conditioned athletes; but better young men and women.
+<div>Every aspect of the comprehensive development of his athletes falls under these core values and the athletes at DCS are immersed into a system of producing results. There is a buy in from the athletes and a collective culture of exceeding expectations from the coaches and interns. Anthony Donskov is not only developing stronger, faster, and better conditioned athletes; but better young men and women.
 Michael Jeffrey Jordan.</div></th>
-<th><img class="img3" src="maria-irudayam-1426677873.jpg">
-<div>I also appreciate the advice to parents as to how to help your child become more mentally resilient to bullying in sports. The specific advice and scenarios are extremely helpful for any child on a team and very helpful in guiding parents, coaches and administrators in how to deal with bullying in sports.
-A. Maria Irudayam. </div></th>
 </th>
 <th><img class="img3" src="GettyImages-1081120088.jpg">
-<div>I have listened to the program twice and I think the information is valuable. I’ve always heard and read that we need to be positive with our young athletes. However, this program provides great value because it gives specific “how to’s” with regards as to how to be positive as a parent as well as how to get your young athletes to think positive.
+<div>I have listened to the program twice and I think the information is valuable. I have always heard and read that we need to be positive with our young athletes. However, this program provides great value because it gives specific how to with regards as to how to be positive as a parent as well as how to get your young athletes to think positive.
 Ronnie O. Sullivan. </div></th>
 </tr>
 </table>
@@ -81,9 +76,6 @@ Ronnie O. Sullivan. </div></th>
     </fieldset>
     <fieldset>
       <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
-    </fieldset>
-    <fieldset>
-      <input placeholder="Your Web Site starts with http://" type="url" tabindex="4" required>
     </fieldset>
     <fieldset>
       <textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
